--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,6 +17,12 @@
                      <h4><a><%= campground.name %></a></h4>
                      <p><%= campground.description %></p>
                      <p><em>Submitted by <%= campground.author.username %></em></p>
+                     <% if(currentUser && campground.author.id.equals(currentUser. _id)){ %>
+                     <a class = 'btn btn-sm btn-warning' href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                     <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                         <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+                    <% } %>
                 </div>
             </div>
             <div class="well">
@@ -24,14 +30,16 @@
                     <a class="btn btn-success" href='/campgrounds/<%= campground._id %>/comments/new'>Add new comment</a>
                 </div>
                 <hr>  
-                <% campground.comments.forEach(comment => { %>
+                 <% campground.comments.forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-12">
                             <strong><%= comment.author.username %></strong>
-                            <span class='pull-right'>10 days ago</span>
+                            <span class="pull-right">10 days ago</span>
                             <p>
-                                <%= comment.text %>
-                             </p>
+                                <%= comment.text %> 
+                            </p>
+                             <a class="btn btn-xs btn-warning" 
+                               href="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>/edit">Edit</a>
                         </div>
                     </div>
                 <% }) %>
