--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,10 +17,10 @@
                      <h4><a><%= campground.name %></a></h4>
                      <p><%= campground.description %></p>
                      <p><em>Submitted by <%= campground.author.username %></em></p>
-                     <% if(currentUser && campground.author.id.equals(currentUser. _id)){ %>
-                     <a class = 'btn btn-sm btn-warning' href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                     <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                         <button class="btn btn-sm btn-danger">Delete</button>
+                     <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                     <a class = 'btn btn-xs btn-warning' href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                     <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                         <button class="btn btn-xs btn-danger">Delete</button>
                     </form>
                     <% } %>
                 </div>
@@ -38,8 +38,13 @@
                             <p>
                                 <%= comment.text %> 
                             </p>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
                              <a class="btn btn-xs btn-warning" 
                                href="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>/edit">Edit</a>
+                               <form class ='delete-form' action="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
+                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                               </form>
+                               <% } %>
                         </div>
                     </div>
                 <% }) %>
