--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -6,13 +6,16 @@
         <div style="width:30%; margin: 30px auto">
            <form action='/campgrounds' method="post">
                 <div class="form-group">
-                    <input class="form-control" type='text' placeholder ='name' name='name'></input>
+                    <input class="form-control" type='text' placeholder ='name' name='name'>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type='text' placeholder ='image url' name='image'></input>
+                    <input class="form-control" type='number' placeholder ='price' name='price' min='0.01' step='0.01'>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type='text' placeholder ='description url' name='description'></input>
+                    <input class="form-control" type='text' placeholder ='image url' name='image'>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type='text' placeholder ='description url' name='description'>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lrg btn-primary btn-block" type='submit'>Submit </button>
